--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Exclude old project folder
+Fullstackproject1-Queue/
