--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,26 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+*.pyc
+*.pyo
+*.pyd
+.Python
+pip-log.txt
+pip-delete-this-directory.txt
+.coverage
+.pytest_cache/
+htmlcov/
+.tox/
+
+# Environment Variables (CRITICAL - Contains secrets!)
+.env
+.env.local
+.env.production
+.env.staging
+backend/.env*
+frontend/.env*
+!backend/.env.example
+!frontend/.env.example
 
 # Instance folder
 instance/
@@ -18,16 +38,90 @@ instance/
 *.db
 *.sqlite
 *.sqlite3
+migrations/versions/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Node.js / Frontend
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+.cache/
+dist/
+build/
+.next/
+out/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Security
+*.pem
+*.key
+*.crt
+*.csr
+id_rsa*
+known_hosts
+
+# Temporary files
+*.tmp
+*.temp
+*~
+.temporary/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Testing
+.coverage
+coverage.xml
+*.cover
+.hypothesis/
+
+# Deployment
+deployment/
+.railway/
+.vercel/
+.netlify/
+
+# Backup files
+*.bak
+*.backup
+*_backup
+
+# macOS
+.AppleDouble
+.LSOverride
+
+# Windows
+*.lnk
+desktop.ini
+
+# Linux
+*~
 
 # Logs
 *.log
