--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,30 +7,18 @@
     "dev": "vite",
     "start": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.575.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^6.20.0",
-    "socket.io-client": "^4.8.3"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "globals": "^16.5.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
 }
